# CMake-Purgatory

./: CMakeLists.txt  README.md  main.cpp  makefile
Adder/: CMakeLists.txt  adder.cpp  adder.h
